@@ -267,6 +267,16 @@
   (assert (= (if-not False :yes)
              :yes)))
 
+(defn test-cut []
+  "test that cut works as expected"
+  (assert (= (cut [1 2 3 4 5])
+             [1 2 3 4 5]))
+  (assert (= (cut [1 2 3 4 5] 1)
+             [2 3 4 5]))
+  (assert (= (cut [1 2 3 4 5] 1 4)
+             [2 3 4]))
+  (assert (= (cut [1 2 3 4 5] 1 4 2)
+             [2 4])))
 
 (defn test-lif []
   "test that lif works as expected"
